fixed page shift bug

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -151,6 +151,10 @@
         @apply border-border;
     }
 
+    html {
+        scrollbar-gutter: stable;
+    }
+
     body {
         @apply bg-background text-foreground;
     }
